--- a/plugins/fln-new-blue-connect-test/test-ajax.html
+++ b/plugins/fln-new-blue-connect-test/test-ajax.html
@@ -102,7 +102,8 @@ jQuery(document).ready( function( $ ) {
 				'event_time': 'Test Time',
 				'evcal_organizer': 'Test Organizer',
 				'evcal_type': 'Test Type',
-				'group': [ bu ]
+				'group': [ bu ],
+				'custom_list': [ 'andy.stubbs@intel.com' ]
 			}
 		};
 		jQuery.post( ajax_url, data, function( response ) {
